--- a/_includes_src/head.html
+++ b/_includes_src/head.html
@@ -1,3 +1,8 @@
+<!doctype html>
+<!--[if lt IE 7]><html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if (IE 7)&!(IEMobile)]><html class="no-js lt-ie9 lt-ie8" lang="en"><![endif]-->
+<!--[if (IE 8)&!(IEMobile)]><html class="no-js lt-ie9" lang="en"><![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title }} &#58; {% endif %}{{ site.title }}</title>
 <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
@@ -31,12 +36,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="stylesheet" href="../assets/css/main.min.css?__inline=true">
-<script src="//use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js"></script>
+<script src="http://use.edgefonts.net/source-sans-pro:n4,i4,n7,i7.js?__inline=true"></script>
 <meta http-equiv="cleartype" content="on">
-<script async src="{{ site.url }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<!-- <script async src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script> -->
+<script async src="../assets/js/vendor/modernizr-2.6.2.custom.min.js?__inline=true"></script>
 <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
 <link rel="shortcut icon" href="{{ site.url }}/favicon.png">
 <link rel="apple-touch-icon-precomposed" href="{{ site.url }}/images/apple-touch-icon-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ site.url }}/images/apple-touch-icon-72x72-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/images/apple-touch-icon-114x114-precomposed.png">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/apple-touch-icon-144x144-precomposed.png">
+
+<script src="../assets/js/vendor/jquery.1.11.1.min.js?__inline=true"></script>
+
